<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_blue_background">

    <EditText
        android:id="@+id/editTextTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spinnerCategory" />

    <Spinner
        android:id="@+id/spinnerCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="120dp"
        android:padding="12dp"
        android:background="@drawable/spinner_background"
        app:layout_constraintTop_toTopOf="@id/editTextTask"
        app:layout_constraintBottom_toBottomOf="@id/editTextTask"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonAddTask"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button_blue"
        android:drawableStart="@drawable/ic_add_task"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/editTextTask"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listViewTasks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:divider="@color/button_blue"
        android:dividerHeight="1dp"
        app:layout_constraintTop_toBottomOf="@id/buttonAddTask"
        app:layout_constraintBottom_toTopOf="@id/buttonClearAll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonClearAll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        android:backgroundTint="@color/delete_red"
        android:drawableStart="@drawable/ic_delete"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 